--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.13.0",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.6",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7"
   }
 }
